@@ -7,7 +7,6 @@ package org.elasticsearch.xpack.rollup.rest;
 
 import org.elasticsearch.action.search.SearchRequest;
 import org.elasticsearch.client.node.NodeClient;
-import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.rest.BaseRestHandler;
 import org.elasticsearch.rest.RestController;
 import org.elasticsearch.rest.RestRequest;
@@ -16,19 +15,13 @@ import org.elasticsearch.rest.action.search.RestSearchAction;
 import org.elasticsearch.xpack.core.rollup.action.RollupSearchAction;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 public class RestRollupSearchAction extends BaseRestHandler {
 
-    private static final Set<String> RESPONSE_PARAMS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
-            RestSearchAction.TYPED_KEYS_PARAM,
-            RestSearchAction.TOTAL_HITS_AS_INT_PARAM)));
+    private static final Set<String> RESPONSE_PARAMS = Set.of(RestSearchAction.TYPED_KEYS_PARAM, RestSearchAction.TOTAL_HITS_AS_INT_PARAM);
 
-    public RestRollupSearchAction(Settings settings, RestController controller) {
-        super(settings);
+    public RestRollupSearchAction(RestController controller) {
         controller.registerHandler(RestRequest.Method.GET, "_rollup_search", this);
         controller.registerHandler(RestRequest.Method.POST, "_rollup_search", this);
         controller.registerHandler(RestRequest.Method.GET, "{index}/_rollup_search", this);
